@@ -1,0 +1,34 @@
+"""unlimited description space
+
+Revision ID: 3dc3b6b9f0a1
+Revises: 6240c2fc9bbd
+Create Date: 2017-05-10 01:29:00.082344
+
+"""
+
+# revision identifiers, used by Alembic.
+revision = '3dc3b6b9f0a1'
+down_revision = '6240c2fc9bbd'
+branch_labels = None
+depends_on = None
+
+from alembic import op
+import sqlalchemy as sa
+
+
+def upgrade():
+    ### commands auto generated by Alembic - please adjust! ###
+    op.alter_column('alerts', 'description',
+               existing_type=sa.VARCHAR(length=200),
+               type_=sa.Text(),
+               existing_nullable=False)
+    ### end Alembic commands ###
+
+
+def downgrade():
+    ### commands auto generated by Alembic - please adjust! ###
+    op.alter_column('alerts', 'description',
+               existing_type=sa.Text(),
+               type_=sa.VARCHAR(length=200),
+               existing_nullable=False)
+    ### end Alembic commands ###
